Updated UG and DG

--- a/docs/Testing.adoc
+++ b/docs/Testing.adoc
@@ -35,11 +35,11 @@ See <<UsingGradle#, UsingGradle.adoc>> for more info on how to run tests using G
 We have three types of tests:
 
 .  _Unit tests_ targeting the lowest level methods/classes. +
-e.g. `seedu.location.commons.StringUtilTest`
+e.g. `seedu.volant.commons.util.StringUtilTest`
 .  _Integration tests_ that are checking the integration of multiple code units (those code units are assumed to be working). +
-e.g. `seedu.location.storage.StorageManagerTest`
+e.g. `seedu.volant.itinerary.logic.commands.AddCommandIntegrationTest`
 .  Hybrids of unit and integration tests. These test are checking multiple code units as well as how the are connected together. +
-e.g. `seedu.location.logic.LogicManagerTest`
+e.g. `seedu.volant.home.logic.HomeLogicManagerTest`
 
 
 == Troubleshooting Testing
