--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -174,6 +174,9 @@ image::DeleteItinerary.png[align="center"]
 [[Design-Model]]
 === Model component
 
+.Class Diagram for the Model component on the `HOME` page
+image::/{imagesDir}/HomeClassDiagram.png[align="center"]
+
 .Structure of the Model Component in Journal
 image::JournalModelDiagram.png[align="center"]
 
