Update Ranice's PPP

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -942,10 +942,11 @@ Use this list as a quick and convenient reference.
 Below is a useful "cheat sheet" of all navigation commands used to navigate through the pages in Volant.
 
 .Graphical summary of navigation commands in Volant
-image::/{imagesDir}/navigation-cheatsheet.png[width="800"]
+image::navigation-cheatsheet.png[width="800"]
 
 <<<<
 
+[[ug-glossary]]
 == Glossary
 This section will cover and explain certain technical/Volant-specific terms that we have used in this user guide.
 
