--- a/docs/team/raniceyue.adoc
+++ b/docs/team/raniceyue.adoc
@@ -55,7 +55,7 @@ from the keyboard.
 ====
 *Map of Navigation Commands* +
 
-image::{imagesDir}/navigation-cheatsheet.png[width="600"]
+image::{imagesDir}/navigation-cheatsheet.png[width="800"]
 ====
 
 
@@ -82,17 +82,22 @@ what commands can be used on the page they are specifically on.
 === Contributions to User Guide
 ==== Sections Written
 * Created all screenshots in the UG.
-* Section 2
-* Section 3
+* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#quick-start[2. Quick Start]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#universal-commands[4.3 Universal Commands]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#glossary[7. Glossary]
 
 === Contributions to Developer Guide
 ==== Sections Written
-* Section 1
-* Section 2
-* Section 3
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#Design-Architecture[3.1 Architecture]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#Design-Ui[3.2. UI component]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#implementation-view-switching[4.1. View Switching for Navigation Commands]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#specific-help-windows-for-different-pages[4.2. Specific Help Windows for different pages]
 
 ==== Diagrams
-* Figure n
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#Design-Architecture[Figure 1. Architecture Diagram]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#Design-Architecture[Figure 3. Component interactions for `home` command in the `JOURNAL` page.]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#Design-Model[Figure 8. Class Diagram for the Model component on the `HOME` page]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#implementation-2[Figure 12. Activity diagram for view switching process in MainWindow for back command]
 
 === Contributions to team-based tasks
 ** *Project Management*
